# CADD-Scripts

./: .gitignore  README.md  pyproject.toml
docs/: testing-gvsrun.md  testing-proteinmc.md  testing-xdock.md  usage.md
docs/superpowers/plans/: 2026-04-05-proteinmc-python-migration.md
docs/superpowers/specs/: 2026-04-05-proteinmc-python-migration-design.md
src/cadd_scripts/: __init__.py  cli.py  utils.py
src/cadd_scripts/gvsrun/: __init__.py  config.py  inputs.py  modes.py  pipeline.py
src/cadd_scripts/gvsrun/stages/: __init__.py  clustering.py  docking.py  filtering.py  ligprep.py  scoring.py  utility.py
src/cadd_scripts/proteinmc/: __init__.py  config.py  prime.py  rosetta.py  utils.py
src/cadd_scripts/xdock/: __init__.py  config.py  ifd.py  modes.py  peptide.py  preparation.py  xglide.py
